z-index fixed

--- a/index.css
+++ b/index.css
@@ -54,6 +54,7 @@ a:hover{
     left: 0px;
     top: 0px;
     right: 0px;
+    z-index: 1;
 }
 .nav.navbar-nav.navbar-right li a{
     color: transparent;
@@ -115,7 +116,7 @@ div#main.row{
     top: 0px;
     right: 0px;
     bottom: 0px;
-    z-index: -1;
+    /z-index: -1;
     min-height: 100vh;
     color: white;
 }
